--- a/flex0.html
+++ b/flex0.html
@@ -20,7 +20,7 @@
       h1 {
         text-align: center;
         color: white;
-        line-height: 100px;
+        line-hegright: 100px;
         margin: 0;
       }
 
